--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,42 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.App {
+  background: white;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 70px 1fr;
+}
+
+.Sidebar {
+  background: black;
+  grid-row:1;
+  grid-column: 1;
+  color: white;
+  min-height: 100vh;
+}
+header {
+  border: 5px solid red;
+  width: 100%;
+  height: 70px;
+  grid-area: 1/2/2/3;
+  box-sizing: border-box;
+}
+.main {
+  grid-row: 2;
+  grid-column: 2;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.MdEditor, .rc-md-editor {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  width: 100%;
+}
