--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,47 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 html,
 body {
   padding: 0;
@@ -24,22 +68,24 @@ a {
 }
 
 .Sidebar {
-  background: black;
+  background: #282b2e;
   grid-row:1;
   grid-column: 1;
   color: white;
   min-height: 100vh;
 }
 header {
-  border: 5px solid red;
+  background: cornflowerblue;
+  color: white;
   width: 100%;
   height: 70px;
-  grid-area: 1/2/2/3;
+  grid-area: 1/1/2/3;
   box-sizing: border-box;
+  align-items: center;
 }
 .main {
   grid-row: 2;
-  grid-column: 2;
+  grid-column: 1/3;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -52,6 +98,7 @@ header {
   flex-grow: 1;
   flex-direction: column;
   width: 100%;
+  max-width: 1000px;
 }
 .MdEditor .custom-html-style pre {
   border-radius: 10px;
